Added Day 6 Files

--- a/code-along/day-5/1 Spacy Finding words, phrases, names.ipynb
+++ b/code-along/day-5/1 Spacy Finding words, phrases, names.ipynb
@@ -9,6 +9,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cb72e09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install spacy"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9d605cce",
    "metadata": {},
@@ -18,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "805a0289",
    "metadata": {},
    "outputs": [],
@@ -41,12 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7ed205f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nlp = .blank(\"\")"
+    "nlp = spacy.blank(\"en\")"
    ]
   },
   {
@@ -59,12 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f2103f5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = (\"Hello world!\")"
+    "doc = nlp(\"Hello world!\")"
    ]
   },
   {
@@ -77,13 +87,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0cb8c1c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "world\n",
+      "!\n"
+     ]
+    }
+   ],
    "source": [
-    "for token in :\n",
-    "    print(token.)"
+    "for token in doc:\n",
+    "    print(token.text)"
    ]
   },
   {
@@ -112,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "944290e7",
    "metadata": {},
    "outputs": [],
@@ -130,12 +150,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bb7671a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "token = doc[]"
+    "token = doc[0]"
    ]
   },
   {
@@ -148,12 +168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "40b5a969",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n"
+     ]
+    }
+   ],
    "source": [
-    "print(token.)"
+    "print(token.text)"
    ]
   },
   {
@@ -174,13 +202,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f430ca13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "world!\n"
+     ]
+    }
+   ],
    "source": [
-    "span = doc[:]\n",
-    "print(span.)"
+    "###Hello world!\n",
+    "\n",
+    "span = doc[1:2]\n",
+    "print(span.text)"
    ]
   },
   {
@@ -197,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "83536d5f",
    "metadata": {},
    "outputs": [],
@@ -265,10 +303,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "f4094033",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parts of Speech: ['', '', '', '', '']\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Parts of Speech:\", [token.pos_ for token in doc])"
    ]
@@ -296,16 +342,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ____\n",
+    "import spacy\n",
     "\n",
     "# Create the English nlp object\n",
-    "nlp = ____\n",
+    "nlp = spacy.blank(\"en\")\n",
     "\n",
     "# Process a text\n",
     "doc = nlp(\"This is a sentence.\")\n",
     "\n",
     "# Print the document text\n",
-    "print(____.text)"
+    "print(doc.text)"
    ]
   },
   {
@@ -318,21 +364,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "45b8407e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Liebe Grüße!\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
     "# Create the German nlp object\n",
-    "nlp = ____\n",
+    "nlp = spacy.blank(\"de\")\n",
     "\n",
     "# Process a text (this is German for: \"Kind regards!\")\n",
     "doc = nlp(\"Liebe Grüße!\")\n",
     "\n",
     "# Print the document text\n",
-    "print(____.text)"
+    "print(doc.text)"
    ]
   },
   {
@@ -353,13 +407,13 @@
     "import spacy\n",
     "\n",
     "# Create the Spanish nlp object\n",
-    "nlp = ____\n",
+    "nlp = spacy.blank(\"es\")\n",
     "\n",
     "# Process a text (this is Spanish for: \"How are you?\")\n",
     "doc = nlp(\"¿Cómo estás?\")\n",
     "\n",
     "# Print the document text\n",
-    "print(____.text)"
+    "print(doc.text)"
    ]
   },
   {
@@ -372,23 +426,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d3c6cad5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
     "nlp = spacy.blank(\"en\")\n",
     "\n",
     "# Process the text\n",
-    "doc = ____(\"I like tree kangaroos and narwhals.\")\n",
+    "doc = nlp(\"I like tree kangaroos and narwhals.\")\n",
     "\n",
     "# Select the first token\n",
-    "first_token = doc[____]\n",
+    "first_token = doc[0]\n",
     "\n",
     "# Print the first token's text\n",
-    "print(first_token.____)"
+    "print(first_token.text)"
    ]
   },
   {
@@ -401,24 +463,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "52ea8681",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tree kangaroos\n",
+      "tree kangaroos and narwhals\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
     "nlp = spacy.blank(\"en\")\n",
     "\n",
     "# Process the text\n",
-    "doc = ____(\"I like tree kangaroos and narwhals.\")\n",
+    "doc = nlp(\"I like tree kangaroos and narwhals.\")\n",
     "\n",
     "# A slice of the Doc for \"tree kangaroos\"\n",
-    "tree_kangaroos = ____\n",
+    "tree_kangaroos = doc[2:4]\n",
     "print(tree_kangaroos.text)\n",
     "\n",
     "# A slice of the Doc for \"tree kangaroos and narwhals\" (without the \".\")\n",
-    "tree_kangaroos_and_narwhals = ____\n",
+    "tree_kangaroos_and_narwhals = doc[2:6]\n",
     "print(tree_kangaroos_and_narwhals.text)"
    ]
   },
@@ -432,10 +503,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "b5401d18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage found: 60\n",
+      "Percentage found: 4\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
@@ -450,11 +530,11 @@
     "# Iterate over the tokens in the doc\n",
     "for token in doc:\n",
     "    # Check if the token resembles a number\n",
-    "    if ____.____:\n",
+    "    if token.like_num:\n",
     "        # Get the next token in the document\n",
     "        next_token = doc[token.i + 1]\n",
     "        # Check if the next token's text equals \"%\"\n",
-    "        if next_token.____ == \"%\":\n",
+    "        if next_token.text == \"%\":\n",
     "            print(\"Percentage found:\", token.text)"
    ]
   }
