--- a/code-along/day-5/3 Spacy Named Entities and Rule Matching.ipynb
+++ b/code-along/day-5/3 Spacy Named Entities and Rule Matching.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "20e55dc2",
    "metadata": {},
    "outputs": [],
@@ -21,45 +21,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "434c6fd7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple ORG\n",
+      "U.K. GPE\n",
+      "$1 billion MONEY\n"
+     ]
+    }
+   ],
    "source": [
     "doc = nlp(\"Apple is looking at buying U.K. startup for $1 billion\")\n",
     "\n",
     "# Iterate over the predicted entities\n",
-    "for ent in doc.:\n",
+    "for ent in doc.ents:\n",
     "    # Print the entity text and its label\n",
-    "    print(ent.text, ent.)"
+    "    print(ent.text, ent.label_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a2d3a363",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Companies, agencies, institutions, etc.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "spacy.explain(\"GPE\")"
+    "spacy.explain(\"ORG\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b3786055",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'noun, proper singular'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spacy.explain(\"NNP\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "07d372c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'direct object'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "spacy.explain(\"dobj\")"
    ]
@@ -74,13 +117,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f568ccb6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rheyannmagcalas\\anaconda3\\lib\\site-packages\\spacy\\displacy\\__init__.py:103: UserWarning: [W011] It looks like you're calling displacy.serve from within a Jupyter notebook or a similar environment. This likely means you're already running a local web server, so there's no need to make displaCy start another one. Instead, you should be able to replace displacy.serve with displacy.render to show the visualization.\n",
+      "  warnings.warn(Warnings.W011)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><!DOCTYPE html>\n",
+       "<html lang=\"en\">\n",
+       "    <head>\n",
+       "        <title>displaCy</title>\n",
+       "    </head>\n",
+       "\n",
+       "    <body style=\"font-size: 16px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; padding: 4rem 2rem; direction: ltr\">\n",
+       "<figure style=\"margin-bottom: 6rem\">\n",
+       "<div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">\n",
+       "<mark class=\"entity\" style=\"background: #7aecec; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Apple\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">ORG</span>\n",
+       "</mark>\n",
+       " is looking at buying \n",
+       "<mark class=\"entity\" style=\"background: #feca74; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    U.K.\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">GPE</span>\n",
+       "</mark>\n",
+       " startup for \n",
+       "<mark class=\"entity\" style=\"background: #e4e7d2; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    $1 billion\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">MONEY</span>\n",
+       "</mark>\n",
+       "</div>\n",
+       "</figure>\n",
+       "</body>\n",
+       "</html></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Using the 'ent' visualizer\n",
+      "Serving on http://0.0.0.0:5000 ...\n",
+      "\n",
+      "Shutting down server on port 5000.\n"
+     ]
+    }
+   ],
    "source": [
-    "from spacy import \n",
-    "(doc, style=\"ent\")"
+    "from spacy import displacy\n",
+    "displacy.serve(doc, style=\"ent\")"
    ]
   },
   {
@@ -93,10 +194,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "87b81732",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple ORG\n",
+      "Missing entity: iPhone X\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
@@ -105,15 +215,15 @@
     "text = \"Upcoming iPhone X release date leaked as Apple reveals pre-orders\"\n",
     "\n",
     "# Process the text\n",
-    "doc = ____\n",
+    "doc = nlp(text)\n",
     "\n",
     "# Iterate over the entities\n",
-    "for ____ in ____.____:\n",
+    "for ent in doc.ents:\n",
     "    # Print the entity text and label\n",
-    "    print(____.____, ____.____)\n",
+    "    print(ent.text, ent.label_)\n",
     "\n",
     "# Get the span for \"iPhone X\"\n",
-    "iphone_x = ____\n",
+    "iphone_x = doc[1:3]\n",
     "\n",
     "# Print the span text\n",
     "print(\"Missing entity:\", iphone_x.text)"
@@ -150,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f28e084d",
    "metadata": {},
    "outputs": [],
@@ -158,35 +268,44 @@
     "import spacy\n",
     "\n",
     "# Import the Matcher\n",
-    "from spacy.matcher import \n",
+    "from spacy.matcher import Matcher\n",
     "\n",
     "# Load a pipeline and create the nlp object\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
     "# Initialize the matcher with the shared vocab\n",
-    "matcher = (nlp.vocab)\n",
+    "matcher = Matcher(nlp.vocab)\n",
     "\n",
     "# Add the pattern to the matcher\n",
-    "pattern = [{\"\": \"\"}, {\"\": \"\"}]\n",
-    "matcher.add(\"\", [pattern])\n",
+    "pattern = [{\"TEXT\": \"iPhone\"}, {\"TEXT\": \"X\"}]\n",
+    "matcher.add(\"IPHONE_PATTERN\", [pattern])\n",
     "\n",
     "# Process some text\n",
     "doc = nlp(\"Upcoming iPhone X release date leaked\")\n",
     "\n",
     "# Call the matcher on the doc\n",
-    "matches = (doc)"
+    "matches = matcher(doc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4cebf6a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iPhone X\n"
+     ]
+    }
+   ],
    "source": [
     "for match_id, start, end in matches:\n",
+    "#     print(match_id, start, end)\n",
     "    # Get the matched span\n",
-    "    matched_span = doc[:]\n",
+    "    matched_span = doc[start:end]\n",
     "    print(matched_span.text)"
    ]
   },
@@ -200,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9b083a4a",
    "metadata": {},
    "outputs": [],
@@ -210,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "c1da7889",
    "metadata": {},
    "outputs": [],
@@ -220,13 +339,13 @@
     "    {\"LOWER\": \"fifa\"},\n",
     "    {\"LOWER\": \"world\"},\n",
     "    {\"LOWER\": \"cup\"},\n",
-    "    {\"IS_PUNCT\": True}\n",
+    "    {\"IS_PUNCT\": False}\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "9cbafe57",
    "metadata": {},
    "outputs": [],
@@ -236,24 +355,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "51223f65",
    "metadata": {},
    "outputs": [],
    "source": [
-    "matches = (doc)"
+    "matches = matcher(doc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "77ac391b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018 FIFA World Cup:\n"
+     ]
+    }
+   ],
    "source": [
     "for match_id, start, end in matches:\n",
     "    # Get the matched span\n",
-    "    matched_span = doc[:]\n",
+    "    matched_span = doc[start:end]\n",
     "    print(matched_span.text)"
    ]
   },
@@ -267,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "7406fe54",
    "metadata": {},
    "outputs": [],
@@ -277,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "b6b0ac32",
    "metadata": {},
    "outputs": [],
@@ -292,24 +419,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "bead97fb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "matches = (doc)"
+    "matches = matcher(doc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "d519d520",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loved dogs\n",
+      "love cats\n"
+     ]
+    }
+   ],
    "source": [
     "for match_id, start, end in matches:\n",
     "    # Get the matched span\n",
-    "    matched_span = doc[:]\n",
+    "    matched_span = doc[start:end]\n",
     "    print(matched_span.text)"
    ]
   },
@@ -328,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "e7df6c56",
    "metadata": {},
    "outputs": [],
@@ -338,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "345336a5",
    "metadata": {},
    "outputs": [],
@@ -352,34 +488,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "dad00052",
    "metadata": {},
    "outputs": [],
    "source": [
+    "matcher = Matcher(nlp.vocab)\n",
     "matcher.add(\"POS_PATTERN\", [pattern])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "8f2082d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "matches = (doc)"
+    "matches = matcher(doc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "929ca546",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bought a smartphone\n",
+      "buying apps\n"
+     ]
+    }
+   ],
    "source": [
     "for match_id, start, end in matches:\n",
     "    # Get the matched span\n",
-    "    matched_span = doc[:]\n",
+    "    matched_span = doc[start:end]\n",
     "    print(matched_span.text)"
    ]
   },
@@ -401,30 +547,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "f0eabfd2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches: ['iPhone X']\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
     "# Import the Matcher\n",
-    "from spacy.____ import ____\n",
+    "from spacy.matcher import Matcher\n",
     "\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "doc = nlp(\"Upcoming iPhone X release date leaked as Apple reveals pre-orders\")\n",
     "\n",
     "# Initialize the Matcher with the shared vocabulary\n",
-    "matcher = ____(____.____)\n",
+    "matcher = Matcher(nlp.vocab)\n",
     "\n",
     "# Create a pattern matching two tokens: \"iPhone\" and \"X\"\n",
-    "pattern = [____]\n",
+    "pattern = [{\"TEXT\": \"iPhone\"}, {\"TEXT\": \"X\"}]\n",
     "\n",
     "# Add the pattern to the matcher\n",
-    "____.____(\"IPHONE_X_PATTERN\", ____)\n",
+    "matcher.add(\"IPHONE_X_PATTERN\", [pattern])\n",
     "\n",
     "# Use the matcher on the doc\n",
-    "matches = ____\n",
+    "matches = matcher(doc)\n",
     "print(\"Matches:\", [doc[start:end].text for match_id, start, end in matches])"
    ]
   },
@@ -438,10 +592,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "ae966fcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total matches found: 3\n",
+      "Match found: downloaded Fortnite\n",
+      "Match found: downloading Minecraft\n",
+      "Match found: download Winzip\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "from spacy.matcher import Matcher\n",
@@ -457,7 +622,7 @@
     ")\n",
     "\n",
     "# Write a pattern that matches a form of \"download\" plus proper noun\n",
-    "pattern = [{\"LEMMA\": ____}, {\"POS\": ____}]\n",
+    "pattern = [{\"LEMMA\": \"download\"}, {\"POS\": \"PROPN\"}]\n",
     "\n",
     "# Add the pattern to the matcher and apply the matcher to the doc\n",
     "matcher.add(\"DOWNLOAD_THINGS_PATTERN\", [pattern])\n",
@@ -479,10 +644,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "68018778",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total matches found: 5\n",
+      "Match found: beautiful design\n",
+      "Match found: smart search\n",
+      "Match found: automatic labels\n",
+      "Match found: optional voice\n",
+      "Match found: optional voice responses\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "from spacy.matcher import Matcher\n",
@@ -496,7 +674,7 @@
     ")\n",
     "\n",
     "# Write a pattern for adjective plus one or two nouns\n",
-    "pattern = [{\"POS\": ____}, {\"POS\": ____}, {\"POS\": ____, \"OP\": ____}]\n",
+    "pattern =  [{\"POS\": \"ADJ\"}, {\"POS\": \"NOUN\"}, {\"POS\": \"NOUN\", \"OP\": \"?\"}]\n",
     "\n",
     "# Add the pattern to the matcher and apply the matcher to the doc\n",
     "matcher.add(\"ADJ_NOUN_PATTERN\", [pattern])\n",
