--- a/code-along/day-5/5 Data Analysis - Similarity and Vectors.ipynb
+++ b/code-along/day-5/5 Data Analysis - Similarity and Vectors.ipynb
@@ -14,20 +14,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "29e06d8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting en-core-web-md==3.4.1\n",
+      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.4.1/en_core_web_md-3.4.1-py3-none-any.whl (42.8 MB)\n",
+      "     --------------------------------------- 42.8/42.8 MB 10.6 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: spacy<3.5.0,>=3.4.0 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from en-core-web-md==3.4.1) (3.4.2)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (2.25.1)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (2.0.6)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (1.0.7)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<1.11.0,>=1.7.4 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (1.8.2)\n",
+      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (1.0.2)\n",
+      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (1.22.4)\n",
+      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (2.4.3)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (61.2.0)\n",
+      "Requirement already satisfied: typer<0.5.0,>=0.3.0 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (0.4.1)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (21.3)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (3.0.6)\n",
+      "Requirement already satisfied: wasabi<1.1.0,>=0.9.1 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (0.9.1)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (4.64.0)\n",
+      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.10 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (3.0.10)\n",
+      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (3.3.0)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (3.1.2)\n",
+      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (2.0.7)\n",
+      "Requirement already satisfied: thinc<8.2.0,>=8.1.0 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (8.1.5)\n",
+      "Requirement already satisfied: pathy>=0.3.5 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (0.6.1)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from packaging>=20.0->spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (3.0.4)\n",
+      "Requirement already satisfied: smart-open<6.0.0,>=5.0.0 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from pathy>=0.3.5->spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (5.1.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from pydantic!=1.8,!=1.8.1,<1.11.0,>=1.7.4->spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (4.1.1)\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (4.0.0)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (2.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (2021.10.8)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\rheyannmagcalas\\appdata\\roaming\\python\\python39\\site-packages (from requests<3.0.0,>=2.13.0->spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (1.26.9)\n",
+      "Requirement already satisfied: confection<1.0.0,>=0.0.1 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from thinc<8.2.0,>=8.1.0->spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (0.0.3)\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.7.8 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from thinc<8.2.0,>=8.1.0->spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (0.7.9)\n",
+      "Requirement already satisfied: colorama in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from tqdm<5.0.0,>=4.38.0->spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (0.4.4)\n",
+      "Requirement already satisfied: click<9.0.0,>=7.1.1 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from typer<0.5.0,>=0.3.0->spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (8.0.4)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from jinja2->spacy<3.5.0,>=3.4.0->en-core-web-md==3.4.1) (2.0.1)\n",
+      "[+] Download and installation successful\n",
+      "You can now load the package via spacy.load('en_core_web_md')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-11-08 20:38:23.976662: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'cudart64_110.dll'; dlerror: cudart64_110.dll not found\n",
+      "2022-11-08 20:38:23.976700: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2022-11-08 20:38:27.743910: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'cudart64_110.dll'; dlerror: cudart64_110.dll not found\n",
+      "2022-11-08 20:38:27.744622: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'cublas64_11.dll'; dlerror: cublas64_11.dll not found\n",
+      "2022-11-08 20:38:27.745333: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'cublasLt64_11.dll'; dlerror: cublasLt64_11.dll not found\n",
+      "2022-11-08 20:38:27.745939: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'cufft64_10.dll'; dlerror: cufft64_10.dll not found\n",
+      "2022-11-08 20:38:27.746716: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'curand64_10.dll'; dlerror: curand64_10.dll not found\n",
+      "2022-11-08 20:38:27.747412: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'cusolver64_11.dll'; dlerror: cusolver64_11.dll not found\n",
+      "2022-11-08 20:38:27.748092: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'cusparse64_11.dll'; dlerror: cusparse64_11.dll not found\n",
+      "2022-11-08 20:38:27.748754: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'cudnn64_8.dll'; dlerror: cudnn64_8.dll not found\n",
+      "2022-11-08 20:38:27.748779: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1850] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n",
+      "WARNING: There was an error checking the latest version of pip.\n"
+     ]
+    }
+   ],
    "source": [
     "!python -m spacy download en_core_web_md"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "81ab8bab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8698332283318978\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "# Load a larger pipeline with vectors\n",
@@ -36,21 +107,29 @@
     "# Compare two documents\n",
     "doc1 = nlp(\"I like fast food\")\n",
     "doc2 = nlp(\"I like pizza\")\n",
-    "print(doc1.(doc2))"
+    "print(doc1.similarity(doc2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "714920e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.685019850730896\n"
+     ]
+    }
+   ],
    "source": [
     "# Compare two tokens\n",
     "doc = nlp(\"I like pizza and pasta\")\n",
-    "token1 = doc[]\n",
-    "token2 = doc[]\n",
-    "print(token1.(token2))"
+    "token1 = doc[2]\n",
+    "token2 = doc[4]\n",
+    "print(token1.similarity(token2))"
    ]
   },
   {
@@ -79,17 +158,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a9a1f33e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.0084   -2.0308   -0.64185   2.6928    0.31771  -2.6662   -3.7372\n",
+      "  5.4714   -5.1751    0.51958   5.4893   -2.0918   -2.4932    2.3152\n",
+      "  0.39299  -2.4273    3.4246   -2.652     2.5341   -4.8091   -1.9631\n",
+      "  4.9045   -2.5438   -1.583    -3.7814   -2.4936   -2.4261    3.8157\n",
+      "  0.46178   1.2286   -0.20967  -1.4053   -2.4087   -2.2263    1.4235\n",
+      " -1.87      2.5892    3.3832    2.8416   -1.5031    1.0614    1.3467\n",
+      "  0.76392   0.93133   2.1568    2.318     1.3607   -0.20667   2.8629\n",
+      "  0.76583   1.6461    0.43932   2.0662   -2.4634   -2.7222    1.179\n",
+      "  0.041448  2.2244    1.7901   -0.55238   2.6845    3.7043   -0.58959\n",
+      " -0.019975 -1.4174   -0.43252  -2.0395   -5.2668    0.78501   0.093281\n",
+      " -0.77092   1.9794   -1.2714   -0.45056   2.5462    1.4792   -4.391\n",
+      " -2.6146    2.5488   -1.5107    0.20595   1.7052   -0.31624  -0.78084\n",
+      "  1.1114    4.4153    5.441     4.3914   -2.641     1.0225   -0.26144\n",
+      "  3.36      2.7056   -2.1533    0.37352  -0.34432   5.0564   -2.8785\n",
+      " -1.6259   -3.3814   -0.02939  -1.6026    2.7834   -5.6109    1.4836\n",
+      "  5.4882   -3.4071    0.90713  -3.1704    1.6337   -1.3856   -1.8585\n",
+      "  1.4224   -0.49556   0.52168   1.0445    1.9231   -3.8861   -0.87857\n",
+      " -1.307    -0.82609  -0.30245  -3.873     0.48592  -1.3468    0.78578\n",
+      "  0.19093  -6.8628    2.7033   -2.8727   -1.8477    3.2288    2.0782\n",
+      " -1.8447    2.1007    1.319    -3.0202   -4.9433    0.84073  -2.6418\n",
+      " -0.091421  1.3504   -1.1077   -0.14208  -1.6702   -0.48354   1.8501\n",
+      " -1.4168   -0.96572  -0.97161  -1.9922    4.492     0.45212   0.051715\n",
+      " -1.5537    3.256     4.7268    2.7913   -2.3955   -1.9742   -0.64347\n",
+      " -2.9866   -0.28671  -0.31315   0.27257  -0.6185   -0.080709  4.8085\n",
+      " -0.83882  -3.4872   -1.9937   -0.41303   1.296     3.82     -2.397\n",
+      "  0.075676 -0.89804  -2.4687    4.0929   -0.81181  -3.1981    4.2611\n",
+      " -2.6092   -1.1662   -1.6013   -4.4613    0.72612  -2.0072    3.433\n",
+      " -0.9936    0.094394 -1.7892   -1.3659   -0.49278  -0.62436  -2.3395\n",
+      " -2.7867    2.8682    3.4173    0.39109  -0.36233   1.1425    2.1709\n",
+      " -2.8608    0.60379   4.3073   -1.72      2.8943    2.0609    0.52322\n",
+      "  1.5345    0.29134  -1.4346    5.2392    3.2616   -3.0885    3.3717\n",
+      "  0.15035   0.09446   0.92742   3.763    -1.5339   -1.5125    1.868\n",
+      "  3.6907   -1.8209   -0.95385   2.8462    2.7702    3.3885   -0.34803\n",
+      " -3.2016    0.40178   0.42005  -4.4751    5.8984   -1.0031    5.3031\n",
+      "  0.83447  -1.5537    0.59361   0.84827   1.058     4.5737   -0.50473\n",
+      "  2.3128   -0.16166   1.3055   -0.22947  -5.9766   -2.9177    1.9629\n",
+      " -2.8195   -2.7858   -1.1393   -3.3073   -0.69731   4.3238   -4.4236\n",
+      "  0.32115  -3.9934    2.4292   -2.4814    0.20681  -0.69637   2.1049\n",
+      " -0.79979   0.48377  -5.2152    2.842     3.4831    2.6903    3.3712\n",
+      " -0.082726  2.045    -6.2751    1.2221   -0.13809   1.7602    0.36628\n",
+      "  3.0925    0.89382   1.6511   -0.030055  0.905    -2.1697   -2.6423\n",
+      "  2.2925   -2.6947    2.6927    1.8836   -0.97302   2.061    -3.4056\n",
+      " -2.8099   -0.63786   4.2887    0.59301   0.99132  -0.82037 ]\n"
+     ]
+    }
+   ],
    "source": [
     "# Load a larger pipeline with vectors\n",
     "nlp = spacy.load(\"en_core_web_md\")\n",
     "\n",
     "doc = nlp(\"I have an apple\")\n",
     "# Access the vector via the token.vector attribute\n",
-    "print(doc[3].)"
+    "print(doc[3].vector)"
    ]
   },
   {
@@ -105,9 +234,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "970ba82e",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2723e922",
    "metadata": {},
+   "outputs": [],
    "source": [
     "doc1 = nlp(\"I like cats\")\n",
     "doc2 = nlp(\"I hate cats\")\n",
@@ -245,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "dfc81136",
    "metadata": {},
    "outputs": [
@@ -320,7 +451,7 @@
        "4  Democrats say Trump agrees to work on immigrat...  Real"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f353167f",
    "metadata": {},
    "outputs": [],
@@ -350,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "da62ea11",
    "metadata": {},
    "outputs": [],
@@ -521,7 +652,6 @@
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
-    "\n",
     "scaler = MinMaxScaler()\n",
     "scaled_train_embed = scaler.fit_transform(X_train_2d)\n",
     "scaled_test_embed = scaler.transform(X_test_2d)\n",
@@ -596,8 +726,7 @@
     "y_pred = clf.predict(X_test_2d)\n",
     "\n",
     "#4. print the classfication report\n",
-    "print(classification_report(y_test, y_pred))\n",
-    "\n"
+    "print(classification_report(y_test, y_pred))"
    ]
   },
   {
