--- a/code-along/day-5/6 Data Analysis Combining Predictions and Rules.ipynb
+++ b/code-along/day-5/6 Data Analysis Combining Predictions and Rules.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "40f7febc",
    "metadata": {},
    "outputs": [],
@@ -12,20 +12,20 @@
     "nlp = spacy.load(\"en_core_web_md\")\n",
     "\n",
     "# Initialize with the shared vocab\n",
-    "from spacy.matcher import \n",
-    "matcher = (nlp.vocab)\n",
+    "from spacy.matcher import Matcher\n",
+    "matcher = Matcher(nlp.vocab)\n",
     "\n",
     "# Patterns are lists of dictionaries describing the tokens\n",
     "pattern = [{\"LEMMA\": \"love\", \"POS\": \"VERB\"}, {\"LOWER\": \"cats\"}]\n",
-    ".add(\"LOVE_CATS\", [pattern])\n",
+    "matcher.add(\"LOVE_CATS\", [pattern])\n",
     "\n",
     "# Operators can specify how often a token should be matched\n",
     "pattern = [{\"TEXT\": \"very\", \"OP\": \"+\"}, {\"TEXT\": \"happy\"}]\n",
-    ".add(\"VERY_HAPPY\", [pattern])\n",
+    "matcher.add(\"VERY_HAPPY\", [pattern])\n",
     "\n",
     "# Calling matcher on doc returns list of (match_id, start, end) tuples\n",
     "doc = nlp(\"I love cats and I'm very very happy\")\n",
-    "matches = (doc)"
+    "matches = matcher(doc)"
    ]
   },
   {
@@ -38,12 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "52ad5465",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matched span: I have a Golden Retriever\n",
+      "Root token: have\n",
+      "Root head token: have\n",
+      "Previous token: a DET\n"
+     ]
+    }
+   ],
    "source": [
-    "matcher = (nlp.)\n",
+    "matcher = Matcher(nlp.vocab)\n",
     "matcher.add(\"DOG\", [[{\"LOWER\": \"golden\"}, {\"LOWER\": \"retriever\"}]])\n",
     "doc = nlp(\"I have a Golden Retriever\")\n",
     "\n",
