--- a/code-along/day-5/7 Processing Pipelines.ipynb
+++ b/code-along/day-5/7 Processing Pipelines.ipynb
@@ -2,18 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b6bbc117",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pipeline: ['tok2vec', 'tagger', 'parser', 'attribute_ruler', 'lemmatizer', 'ner', 'custom_component']\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
-    "from spacy.language import \n",
+    "from spacy.language import Language\n",
     "\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
     "# Define a custom component\n",
+    "@Language.component(\"custom_component\")\n",
     "def custom_component_function(doc):\n",
     "    # Print the doc's length\n",
     "    print(\"Doc length:\", len(doc))\n",
@@ -21,7 +30,7 @@
     "    return doc\n",
     "\n",
     "# Add the component first in the pipeline\n",
-    "nlp.add_pipe(\"\", first=True)\n",
+    "nlp.add_pipe(\"custom_component\", last=True)\n",
     "\n",
     "# Print the pipeline component names\n",
     "print(\"Pipeline:\", nlp.pipe_names)"
@@ -29,15 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "66704428",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doc length: 3\n"
+     ]
+    }
+   ],
    "source": [
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
     "# Define a custom component\n",
-    "\n",
+    "@Language.component(\"custom_component\")\n",
     "def custom_component_function(doc):\n",
     "    # Print the doc's length\n",
     "    print(\"Doc length:\", len(doc))\n",
@@ -45,7 +62,7 @@
     "    return doc\n",
     "\n",
     "# Add the component first in the pipeline\n",
-    "nlp.add_pipe(\"\", first=True)\n",
+    "nlp.add_pipe(\"custom_component\", first=True)\n",
     "\n",
     "# Process a text\n",
     "doc = nlp(\"Hello world!\")"
