--- a/code-along/day-5/4 Data Analysis - Structure.ipynb
+++ b/code-along/day-5/4 Data Analysis - Structure.ipynb
@@ -2,29 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6d3999ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hash value: 3197928453018144401\n",
+      "string value: coffee\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
     "doc = nlp(\"I love coffee\")\n",
-    "print(\"hash value:\", nlp..[\"coffee\"])\n",
-    "print(\"string value:\", nlp..[3197928453018144401])"
+    "print(\"hash value:\", nlp.vocab.strings[\"coffee\"])\n",
+    "print(\"string value:\", nlp.vocab.strings[3197928453018144401])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2b8811b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hash value: 3197928453018144401\n"
+     ]
+    }
+   ],
    "source": [
     "doc = nlp(\"I love coffee\")\n",
-    "print(\"hash value:\", doc..[\"coffee\"])"
+    "print(\"hash value:\", doc.vocab.strings[\"coffee\"])"
    ]
   },
   {
@@ -37,10 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4a3a428e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "coffee 3197928453018144401 True\n"
+     ]
+    }
+   ],
    "source": [
     "doc = nlp(\"I love coffee\")\n",
     "lexeme = nlp.vocab[\"coffee\"]\n",
@@ -79,10 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "00216d84",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5439657043933447811\n",
+      "cat\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
@@ -90,11 +124,11 @@
     "doc = nlp(\"I have a cat\")\n",
     "\n",
     "# Look up the hash for the word \"cat\"\n",
-    "cat_hash = ____.____.____[____]\n",
+    "cat_hash = doc.vocab.strings[\"cat\"]\n",
     "print(cat_hash)\n",
     "\n",
     "# Look up the cat_hash to get the string\n",
-    "cat_string = ____.____.____[____]\n",
+    "cat_string = doc.vocab.strings[cat_hash]\n",
     "print(cat_string)"
    ]
   },
@@ -108,10 +142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5694c33b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "380\n",
+      "PERSON\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
@@ -119,11 +162,11 @@
     "doc = nlp(\"David Bowie is a PERSON\")\n",
     "\n",
     "# Look up the hash for the string label \"PERSON\"\n",
-    "person_hash = ____.____.____[____]\n",
+    "person_hash = doc.vocab.strings[\"PERSON\"]\n",
     "print(person_hash)\n",
     "\n",
     "# Look up the person_hash to get the string\n",
-    "person_string = ____.____.____[____]\n",
+    "person_string = doc.vocab.strings[person_hash]\n",
     "print(person_string)"
    ]
   },
@@ -137,10 +180,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "feebd35e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Hello world!"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import spacy\n",
     "nlp = spacy.blank(\"en\")\n",
@@ -153,7 +207,8 @@
     "spaces = [True, False, False]\n",
     "\n",
     "# Create a doc manually\n",
-    "doc = Doc(nlp., =words, =spaces)"
+    "doc = Doc(nlp.vocab, words=words, spaces=spaces)\n",
+    "doc"
    ]
   },
   {
@@ -166,10 +221,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "18bf189a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Hello world!"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from spacy.tokens import Doc, Span\n",
     "\n",
@@ -178,13 +244,13 @@
     "spaces = [True, False, False]\n",
     "\n",
     "# Create a doc manually\n",
-    "doc = Doc(nlp., =words, =spaces)\n",
+    "doc = Doc(nlp.vocab, words=words, spaces=spaces)\n",
     "\n",
     "# Create a span manually\n",
     "span = (doc, 0, 2)\n",
     "\n",
     "# Create a span with a label\n",
-    "span_with_label = (doc, 0, 1, label=\"GREETING\")\n",
+    "span_with_label = Span(doc, 0, 1, label=\"GREETING\")\n",
     "\n",
     "# Add span to the doc.ents\n",
     "doc.ents = [span_with_label]\n",
@@ -193,13 +259,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "bc77452f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><!DOCTYPE html>\n",
+       "<html lang=\"en\">\n",
+       "    <head>\n",
+       "        <title>displaCy</title>\n",
+       "    </head>\n",
+       "\n",
+       "    <body style=\"font-size: 16px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; padding: 4rem 2rem; direction: ltr\">\n",
+       "<figure style=\"margin-bottom: 6rem\">\n",
+       "<div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">\n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Hello\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">GREETING</span>\n",
+       "</mark>\n",
+       " world!</div>\n",
+       "</figure>\n",
+       "</body>\n",
+       "</html></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Using the 'ent' visualizer\n",
+      "Serving on http://0.0.0.0:5000 ...\n",
+      "\n",
+      "Shutting down server on port 5000.\n"
+     ]
+    }
+   ],
    "source": [
-    "from spacy import \n",
-    "(doc, style=\"ent\")"
+    "from spacy import displacy\n",
+    "displacy.serve(doc, style=\"ent\")"
    ]
   },
   {
@@ -233,22 +339,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f1faaef7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spaCy is cool!\n"
+     ]
+    }
+   ],
    "source": [
     "nlp = spacy.blank(\"en\")\n",
     "\n",
     "# Import the Doc class\n",
-    "from ____ import ____\n",
+    "from spacy.tokens import Doc, Span\n",
     "\n",
     "# Desired text: \"spaCy is cool!\"\n",
     "words = [\"spaCy\", \"is\", \"cool\", \"!\"]\n",
     "spaces = [True, True, False, False]\n",
     "\n",
     "# Create a Doc from the words and spaces\n",
-    "doc = ____(____, words=words, spaces=spaces)\n",
+    "doc = Doc(nlp.vocab, words=words, spaces=spaces)\n",
     "print(doc.text)"
    ]
   },
@@ -262,24 +376,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "15d1be63",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Go, get started!\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
     "nlp = spacy.blank(\"en\")\n",
     "\n",
     "# Import the Doc class\n",
-    "from ____ import ____\n",
+    "from spacy.tokens import Doc\n",
     "\n",
     "# Desired text: \"Go, get started!\"\n",
     "words = [\"Go\", \",\", \"get\", \"started\", \"!\"]\n",
-    "spaces = [____, ____, ____, ____, ____]\n",
+    "spaces = [False, True, True, False, False]\n",
     "\n",
     "# Create a Doc from the words and spaces\n",
-    "doc = ____(____, ____=____, ____=____)\n",
+    "doc =Doc(nlp.vocab, words=words, spaces=spaces)\n",
     "print(doc.text)"
    ]
   },
@@ -293,24 +415,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d3a865b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oh, really?!\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
     "nlp = spacy.blank(\"en\")\n",
     "\n",
     "# Import the Doc class\n",
-    "from ____ import ____\n",
+    "from spacy.tokens import Doc\n",
     "\n",
     "# Desired text: \"Oh, really?!\"\n",
-    "words = [____, ____, ____, ____, ____]\n",
-    "spaces = [____, ____, ____, ____, ____]\n",
+    "words = [\"Oh\", \",\", \"really\", \"?\", \"!\"]\n",
+    "spaces =  [False, True, False, False, False]\n",
+    "\n",
     "\n",
     "# Create a Doc from the words and spaces\n",
-    "doc = ____(____, ____=____, ____=____)\n",
+    "doc = Doc(nlp.vocab, words=words, spaces=spaces)\n",
     "print(doc.text)"
    ]
   },
@@ -324,34 +455,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d501a50c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I like David Bowie\n",
+      "David Bowie PERSON\n",
+      "[('David Bowie', 'PERSON')]\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
     "nlp = spacy.blank(\"en\")\n",
     "\n",
     "# Import the Doc and Span classes\n",
-    "from spacy.____ import ____, ____\n",
+    "from spacy.tokens import Doc, Span\n",
     "\n",
     "words = [\"I\", \"like\", \"David\", \"Bowie\"]\n",
     "spaces = [True, True, True, False]\n",
     "\n",
     "# Create a doc from the words and spaces\n",
-    "doc = ____(____, ____, ____)\n",
+    "doc = Doc(nlp.vocab, words=words, spaces=spaces)\n",
     "print(doc.text)\n",
     "\n",
     "# Create a span for \"David Bowie\" from the doc and assign it the label \"PERSON\"\n",
-    "span = ____(____, ____, ____, label=____)\n",
+    "span = Span(doc, 2, 4, label=\"PERSON\")\n",
     "print(span.text, span.label_)\n",
     "\n",
     "# Add the span to the doc's entities\n",
-    "____.____ = [____]\n",
+    "doc.ents = [span]\n",
     "\n",
     "# Print entities' text and labels\n",
     "print([(ent.text, ent.label_) for ent in doc.ents])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84bd77da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><!DOCTYPE html>\n",
+       "<html lang=\"en\">\n",
+       "    <head>\n",
+       "        <title>displaCy</title>\n",
+       "    </head>\n",
+       "\n",
+       "    <body style=\"font-size: 16px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; padding: 4rem 2rem; direction: ltr\">\n",
+       "<figure style=\"margin-bottom: 6rem\">\n",
+       "<div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">I like \n",
+       "<mark class=\"entity\" style=\"background: #aa9cfc; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    David Bowie\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">PERSON</span>\n",
+       "</mark>\n",
+       "</div>\n",
+       "</figure>\n",
+       "</body>\n",
+       "</html></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Using the 'ent' visualizer\n",
+      "Serving on http://0.0.0.0:5000 ...\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from spacy import displacy\n",
+    "displacy.serve(doc, style=\"ent\")"
    ]
   }
  ],
